JSAI/error/src/test/resources/base/loops_a006.js

obj = {foo: 1, bar: 2};

fields = "";

for (x in obj) {
  print(x)
  fields += x;
};

print(fields)

